<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="82dp"
        android:onClick="deleateuser"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="78dp"
        android:onClick="updateInfo"
        android:text="@string/btn5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="332dp"
        android:layout_marginBottom="555dp"
        android:text="@string/txt1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="329dp"
        android:layout_marginBottom="454dp"
        android:text="@string/txt2" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="534dp"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="443dp"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="341dp"
        android:onClick="listAll"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="213dp"
        android:onClick="addInfo"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="218dp"
        android:onClick="getInfo"
        android:text="@string/btn3" />
</RelativeLayout>


